Add class 7 github format reporter

--- a/class07/class07.Rmd
+++ b/class07/class07.Rmd
@@ -2,7 +2,7 @@
 title: "Class 7: R functions and packages"
 author: "Xiaohui Lyu"
 date: "2019/4/24"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
